@@ -1,5 +1,5 @@
 #
-# "$Id: mime.convs,v 1.16 2002/04/23 17:54:04 mike Exp $"
+# "$Id: mime.convs,v 1.17 2002/08/09 00:00:54 mike Exp $"
 #
 #   MIME converts file for the Common UNIX Printing System (CUPS).
 #
@@ -46,12 +46,26 @@
 application/pdf		application/postscript	33	pdftops
 application/postscript	application/vnd.cups-postscript	66	pstops
 application/vnd.hp-HPGL	application/postscript	66	hpgltops
-image/*			application/vnd.cups-postscript	66	imagetops
 application/x-cshell	application/postscript	33	texttops
 application/x-perl	application/postscript	33	texttops
 application/x-shell	application/postscript	33	texttops
 text/plain		application/postscript	33	texttops
 text/html		application/postscript	33	texttops
+image/gif		application/vnd.cups-postscript	66	imagetops
+image/png		application/vnd.cups-postscript	66	imagetops
+image/jpeg		application/vnd.cups-postscript	66	imagetops
+image/tiff		application/vnd.cups-postscript	66	imagetops
+image/x-photocd		application/vnd.cups-postscript	66	imagetops
+image/x-portable-anymap	application/vnd.cups-postscript	66	imagetops
+image/x-portable-bitmap	application/vnd.cups-postscript	66	imagetops
+image/x-portable-graymap application/vnd.cups-postscript	66	imagetops
+image/x-portable-pixmap	application/vnd.cups-postscript	66	imagetops
+image/x-sgi-rgb		application/vnd.cups-postscript	66	imagetops
+image/x-xbitmap		application/vnd.cups-postscript	66	imagetops
+image/x-xpixmap		application/vnd.cups-postscript	66	imagetops
+image/x-xwindowdump	application/vnd.cups-postscript	66	imagetops
+image/x-sun-raster	application/vnd.cups-postscript	66	imagetops
+
 
 ########################################################################
 #
@@ -68,7 +82,20 @@ text/html		application/postscript	33	texttops
 # Raster filters...
 #
 
-image/*			application/vnd.cups-raster	100	imagetoraster
+image/gif		application/vnd.cups-raster	100	imagetoraster
+image/png		application/vnd.cups-raster	100	imagetoraster
+image/jpeg		application/vnd.cups-raster	100	imagetoraster
+image/tiff		application/vnd.cups-raster	100	imagetoraster
+image/x-photocd		application/vnd.cups-raster	100	imagetoraster
+image/x-portable-anymap	application/vnd.cups-raster	100	imagetoraster
+image/x-portable-bitmap	application/vnd.cups-raster	100	imagetoraster
+image/x-portable-graymap application/vnd.cups-raster	100	imagetoraster
+image/x-portable-pixmap	application/vnd.cups-raster	100	imagetoraster
+image/x-sgi-rgb		application/vnd.cups-raster	100	imagetoraster
+image/x-xbitmap		application/vnd.cups-raster	100	imagetoraster
+image/x-xpixmap		application/vnd.cups-raster	100	imagetoraster
+image/x-xwindowdump	application/vnd.cups-raster	100	imagetoraster
+image/x-sun-raster	application/vnd.cups-raster	100	imagetoraster
 
 # pstoraster is now part of ESP Ghostscript...
 #application/vnd.cups-postscript	application/vnd.cups-raster	100	pstoraster
@@ -85,5 +112,5 @@ image/*			application/vnd.cups-raster	100	imagetoraster
 #application/octet-stream	application/vnd.cups-raw	0	-
 
 #
-# End of "$Id: mime.convs,v 1.16 2002/04/23 17:54:04 mike Exp $".
+# End of "$Id: mime.convs,v 1.17 2002/08/09 00:00:54 mike Exp $".
 #
